tests/e2e/function_call_invalid_path.story
a.b (key: 2)
